monitoring/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptime-kuma
  namespace: kuma
spec:
  replicas: 1
  serviceName: uptime-kuma-service
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: uptime-kuma
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1.11.4
          ports:
            - name: uptime-kuma
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - name: sc-nfs-pvc
              mountPath: /data/nfs1

  volumeClaimTemplates:
    - metadata:
        name: sc-nfs-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "nfs-client"
        resources:
          requests:
            storage: 1Gi
              
#          volumeMounts:
#            - name: kuma-data
#              mountPath: /data/nfs1/
#
#      volumes:
#      - name: kuma-data
#        persistentVolumeClaim:
#          claimName: sc-nfs-pvc
