monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma
  namespace: kuma
  annotations:
   #kubernetes.io/ingress.allow-http: "true"
   kubernetes.io/ingress.class: nginx 
   cert-manager.io/cluster-issuer: letsencrypt-prod
   #cert-manager.io/cluster-issuer: letsencrypt-staging
   acme.cert-manager.io/http01-edit-in-place: "true"
   nginx.org/websocket-services: uptime-kuma-service
   #nginx.ingress.kubernetes.io/ssl-passthrough: "true"

spec:
  tls:
  - hosts:
    - kuma.nsserver.eu
    secretName: tls-secret-kkk
  rules:
  - host: kuma.nsserver.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma-service
            port:
              number: 3001
